# cpp-design-patterns

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: README.md  codeql-analysis.yml  linux.yml  pvs-studio-build-analyze.yml
behavioral_patterns/: CMakeLists.txt
behavioral_patterns/strategy/: CMakeLists.txt  README.md  main.cpp
behavioral_patterns/strategy/car/: camry.h  car.cpp  car.h  car_fwd.h  corolla.h  supra.h
behavioral_patterns/strategy/remaining_driving_distance_algorithm/: rdda.h  rdda_fwd.h  rdda_v1.h  rdda_v2.h  rdda_v3.h
command/: CMakeLists.txt  car_command.cpp  car_command_handler.cpp  car_command_handler.h  command.h  main.cpp
decoupling_patterns/: CMakeLists.txt
decoupling_patterns/component/: CMakeLists.txt  README.md  game_engine.cpp  game_engine.h  game_engine_basic.cpp  game_engine_basic.h  game_engine_sdl.cpp  game_engine_sdl.h  graphics_component.cpp  graphics_component.h  input_component.cpp  input_component.h  main.cpp  physics_component.cpp  physics_component.h  snake.cpp  snake.h  world.cpp  world.h
decoupling_patterns/event_queue/: CMakeLists.txt  README.md  audio_fx.cpp  audio_fx.h  event.cpp  event.h  main.cpp
design_patterns_revisited/: CMakeLists.txt
design_patterns_revisited/command/: CMakeLists.txt  README.md  car_command.cpp  car_command.h  car_command_handler.cpp  command.cpp  main.cpp
design_patterns_revisited/flyweight/: CMakeLists.txt  README.md  main.cpp  map.cpp  map.h  map_user.cpp  map_user.h  terrain.cpp  terrain.h  texture.cpp  texture.h
design_patterns_revisited/observer/: CMakeLists.txt  README.md  main.cpp  observer.cpp  observer.h  observer_node.cpp  observer_node.h  observer_node_pool.cpp  observer_node_pool.h  subject.cpp  subject.h
design_patterns_revisited/prototype/: CMakeLists.txt  README.md  main.cpp  spawner.cpp  spawner.h  unit.cpp  unit.h
design_patterns_revisited/singleton/: CMakeLists.txt  README.md  main.cpp  singleton.h
design_patterns_revisited/state/: CMakeLists.txt  README.md  battle_turn.cpp  battle_turn.fwd.h  battle_turn.h  battle_turn_state.cpp  battle_turn_state.fwd.h  battle_turn_state.h  input.cpp  input.h  main.cpp
libraries/: CMakeLists.txt
libraries/carlib/: CMakeLists.txt  carlib.cpp  carlib.h
libraries/gamelib/: CMakeLists.txt  gamelib.cpp  gamelib.h
optimization_patterns/: CMakeLists.txt
optimization_patterns/spatial_partition/: README.md
sequencing_patterns/: CMakeLists.txt  README.md
